examples/ill-typed/case3.hm
\x -> case x of
        []        -> x
        (f:[])    -> f 3

